--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             document.getElementById('questionPage').style.display = 'none';
             document.getElementById('success').style.display = 'block';
             
-            // Automatically jump to Sample 7 after 3 seconds
+            // Automatically jump to Sample 11 after 3 seconds
             setTimeout(() => {
-                window.location.href = "https://devinahub.github.io/Sample-7/";
+                window.location.href = "https://github.com/CupidCrafted/Sample-11";
             }, 3000);
         }
     </script>
