Update redirect URL to Sample 11

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             
             // Automatically jump to Sample 11 after 3 seconds
             setTimeout(() => {
-                window.location.href = "https://github.com/CupidCrafted/Sample-11";
+                window.location.href = "https://cupidcrafted.github.io/Sample-11/";
             }, 3000);
         }
     </script>
